# CameraManager

./: CMakeLists.txt
CameraManager/props/: defaultCameraSettings.ini  quickfile_camerasettings.ini  spinCameraSettings.ini
src/: abstractcamera.cpp  abstractcamera.h  abstractcameramanager.cpp  abstractcameramanager.h  calibrationfile.cpp  calibrationfile.h  calibrationfileopenglwidget.cpp  calibrationfileopenglwidget.h  imagedetect.h  imageopenglwidget.cpp  imageopenglwidget.h  imageviewerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  qopenglvideowidget.h  socketviewerwidget.cpp  socketviewerwidget.h  spincamera.cpp  spincamera.h  spincameraproperty.h  spinnaker_compat.h  systemmanager.cpp  systemmanager.h  texture.h  ui_mainwindow.h  videoopenglwidget.cpp  widgetgl.cpp  widgetgl.h
src/3DProject/: displaywindow.h
